--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint": "^7.28.0",
+    "eslint-config-next": "^11.0.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
